убрала подсвечивание синим для .search

--- a/style.css
+++ b/style.css
@@ -79,11 +79,11 @@ img {
 
 .search {
     font-size: 23px;
-    font-weight: 900;
     margin-top: 22px;
     margin-right: 167px;
     float: right;
     text-decoration: none;
+    color: black;
 }
 
 .slider .slider_content {
