добавлены префиксы для grid и flex для кроссбраузерности

--- a/style.css
+++ b/style.css
@@ -222,12 +222,18 @@ img {
     float: left;
     margin-left: 30px;
     margin-top: 51px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
 }
 
 .items_small .item .hidden {
     opacity: 0;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
     height: 100%;
 }
 
@@ -314,8 +320,13 @@ img {
     float: left;
     width: 632px;
     height: 455px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     padding-left: 51px;
     padding-top: 228px;
 }
@@ -375,9 +386,12 @@ img {
 
 .item_list2 .images {
     clear: both;
+    display: -ms-grid;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
+    -ms-grid-columns: 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr;
+    -ms-grid-rows: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
     grid-gap: 30px;
     width: 1170px;
 }
@@ -873,9 +887,12 @@ img {
 }
 
 .catalog .item_pictures {
+    display: -ms-grid;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+    -ms-grid-columns: 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr;
+    -ms-grid-rows: 1fr 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
     grid-gap: 30px;
     clear: both;
     padding: 51px 98px 71px;
@@ -903,26 +920,41 @@ img {
 }
 
 .contacts {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: row;
-    justify-content: center;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     padding: 71px 98px 121px;
     font-size: 14px;
     font-weight: 700;
 }
 
+
 .contacts .block {
     border: 1px solid #9c9c9c;
     background-color: #ffffff;
     opacity: 0.9;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=90)";
     width: 287px;
     height: 257px;
     padding: 48px 40px 63px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     text-align: center;
     margin-left: 30px;
 }
+
 
 .contacts .block:first-child {
     margin-left: 0px;
